# SP_EX4

./: CMakeLists.txt  Demo.cpp  Test.cpp
sources/: Character.cpp  Character.hpp  Cowboy.cpp  Cowboy.hpp  Ninja.cpp  Ninja.hpp  OldNinja.cpp  OldNinja.hpp  SmartTeam.cpp  SmartTeam.hpp  Team.cpp  Team.hpp  Team2.cpp  Team2.hpp  TrainedNinja.cpp  TrainedNinja.hpp  YountNinja.cpp  YountNinja.hpp  character.cpp  character.hpp  cowboy.cpp  cowboy.hpp  ninja.cpp  ninja.hpp  point.cpp  point.hpp
