cmake_minimum_required(VERSION 3.25)
project(SP_EX4)

set(CMAKE_CXX_STANDARD 17)

add_executable(SP_EX4 main.cpp sources/point.cpp sources/point.hpp sources/character.cpp sources/character.hpp sources/cowboy.cpp sources/cowboy.hpp sources/ninja.cpp sources/ninja.hpp ../../../../Demo.cpp sources/OldNinja.cpp sources/OldNinja.cpp sources/OldNinja.hpp sources/YountNinja.cpp sources/YountNinja.hpp sources/TrainedNinja.cpp sources/TrainedNinja.hpp sources/Team.cpp sources/Team.hpp)
