cmake_minimum_required(VERSION 3.25)
project(SP_EX4)

set(CMAKE_CXX_STANDARD 17)

add_executable(SP_EX4 main.cpp sources/point.cpp sources/point.hpp sources/Character.cpp sources/Character.hpp sources/Cowboy.cpp sources/Cowboy.hpp sources/Ninja.cpp sources/Ninja.hpp sources/OldNinja.hpp sources/TrainedNinja.hpp  sources/Team.hpp Test.cpp sources/Team.cpp Demo.cpp StudentTest1.cpp sources/Team2.cpp sources/Team2.hpp sources/SmartTeam.cpp sources/SmartTeam.hpp)
